--- a/index.html
+++ b/index.html
@@ -10,4 +10,22 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script id="vertex-shader-3d" type="x-shader/x-vertex">
+    attribute vec4 a_position;
+    uniform mat4 u_matrix;
+    varying vec3 v_normal;
+    void main() {
+      gl_Position = u_matrix * a_position;
+      v_normal = normalize(a_position.xyz);
+    }
+  </script>
+  <!-- fragment shader -->
+  <script id="fragment-shader-3d" type="x-shader/x-fragment">
+    precision mediump float;
+    varying vec3 v_normal;
+    uniform samplerCube u_texture;
+    void main() {
+       gl_FragColor = textureCube(u_texture, normalize(v_normal));
+    }
+  </script>
 </html>
